--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 blessed==1.20.0
 botocore==1.34.68
+certifi==2024.2.2
 chalice==1.31.0
+charset-normalizer==3.3.2
 click==8.1.7
+idna==3.6
 inquirer==2.10.1
 jmespath==1.0.1
 python-dateutil==2.9.0.post0
 python-editor==1.0.4
 PyYAML==6.0.1
 readchar==4.0.6
+requests==2.31.0
 six==1.16.0
 urllib3==1.26.18
 wcwidth==0.2.13
