--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blessed==1.20.0
+boto3==1.34.68
 botocore==1.34.68
 certifi==2024.2.2
 chalice==1.31.0
@@ -12,6 +13,7 @@ python-editor==1.0.4
 PyYAML==6.0.1
 readchar==4.0.6
 requests==2.31.0
+s3transfer==0.10.1
 six==1.16.0
 urllib3==1.26.18
 wcwidth==0.2.13
