--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ blessed==1.20.0
 boto3==1.34.68
 botocore==1.34.68
 certifi==2024.2.2
+cffi==1.16.0
 chalice==1.31.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.5
 idna==3.6
 inquirer==2.10.1
 jmespath==1.0.1
+pycparser==2.21
+PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-editor==1.0.4
 PyYAML==6.0.1
