--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,19 @@ services:
     ports:
       - 8000:8000
     command: chalice local --host=0.0.0.0
+  dynamo:
+    image: amazon/dynamodb-local
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+    ports:
+      - 8002:8000
+    volumes:
+      - ./dynamodb:/home/dynamodblocal/data
+
+  dynamo-admin:
+    image: aaronshaf/dynamodb-admin:latest
+    environment:
+      DYNAMO_ENDPOINT: dynamo:8000
+    ports:
+      - 8001:8001
+    depends_on:
+      - dynamo
