--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -2,6 +2,12 @@
   "version": "2.0",
   "app_name": "google_login_back",
   "stages": {
+    "local": {
+      "api_gateway_stage": "local",
+      "environment_variables": {
+        "DB_ENDPOINT": "http://dynamo:8000"
+      }
+    },
     "dev": {
       "api_gateway_stage": "api"
     }
