--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ inquirer==2.10.1
 jmespath==1.0.1
 pycparser==2.21
 PyJWT==2.8.0
+pynamodb==6.0.0
 python-dateutil==2.9.0.post0
 python-editor==1.0.4
 PyYAML==6.0.1
@@ -19,5 +20,6 @@ readchar==4.0.6
 requests==2.31.0
 s3transfer==0.10.1
 six==1.16.0
+typing_extensions==4.10.0
 urllib3==1.26.18
 wcwidth==0.2.13
