--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.2
 
 phases:
   pre_build:
+    on-failure: ABORT
     commands:
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
   build:
@@ -10,5 +11,7 @@ phases:
       - pip install -r requirements.txt
       - chalice deploy
   post_build:
+    on-failure: ABORT
     commands:
       - aws s3 cp .chalice/deployed/dev.json s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json
+      - python create_table.py
