--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       - .:/work
       - ~/.aws/:/root/.aws
     ports:
-      - 8000:8000
+      - 8002:8002
     environment:
       DB_ENDPOINT: http://dynamo:8000
-    command: chalice local --host=0.0.0.0
+    command: chalice local --host=0.0.0.0 --port=8002
   dynamo:
     image: amazon/dynamodb-local
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
