--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,32 @@ cffi==1.16.0
 chalice==1.31.0
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 cryptography==42.0.5
+exceptiongroup==1.2.1
 idna==3.6
+iniconfig==2.0.0
 inquirer==2.10.1
 jmespath==1.0.1
+packaging==24.1
+pactman==2.31.0
+pluggy==1.5.0
 pycparser==2.21
 PyJWT==2.8.0
 pynamodb==6.0.0
+pytest==8.2.2
 python-dateutil==2.9.0.post0
 python-editor==1.0.4
 PyYAML==6.0.1
 readchar==4.0.6
 requests==2.31.0
+restnavigator==1.0.1
 s3transfer==0.10.1
+semver==3.0.2
 six==1.16.0
+tomli==2.0.1
 typing_extensions==4.10.0
+Unidecode==1.3.8
+uritemplate==4.1.1
 urllib3==1.26.18
 wcwidth==0.2.13
