--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - 8002:8002
     environment:
       DB_ENDPOINT: http://dynamo:8000
+      TEST_PORT: 8008
+      PYTEST_ADDOPTS: "-v --pact-files=pacts/*.json"
     command: chalice local --host=0.0.0.0 --port=8002
   dynamo:
     image: amazon/dynamodb-local
