--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,15 +1,22 @@
 version: 0.2
 
 phases:
+  install:
+    on-failure: ABORT
+    commands:
+      - pip install -r requirements.txt
+
   pre_build:
     on-failure: ABORT
     commands:
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
+      - ./test.sh
+
   build:
     on-failure: ABORT
     commands:
-      - pip install -r requirements.txt
       - chalice deploy
+
   post_build:
     on-failure: ABORT
     commands:
