--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -8,6 +8,12 @@
         "DB_ENDPOINT": "http://dynamo:8000"
       }
     },
+    "test": {
+      "api_gateway_stage": "test",
+      "environment_variables": {
+        "DB_ENDPOINT": "http://dynamo-test:8000"
+      }
+    },
     "dev": {
       "api_gateway_stage": "api",
       "autogen_policy": false
