--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,10 @@ phases:
   pre_build:
     on-failure: ABORT
     commands:
-      - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
+      - docker compose up dynamo-test -d
       - ./test.sh
+      - docker compose stop
+      - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
 
   build:
     on-failure: ABORT
