--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,8 @@ phases:
       - TEMP_ROLE=$(aws sts assume-role --role-arn $ASSUME_ROLE_ARN --role-session-name test)
       - export AWS_ACCESS_KEY_ID=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.AccessKeyId')
       - export AWS_SECRET_ACCESS_KEY=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.SecretAccessKey')
+      - ./mask_secret.sh $AWS_ACCESS_KEY_ID
+      - ./mask_secret.sh $AWS_SECRET_ACCESS_KEY
       - docker compose up dynamo-test -d
       - docker compose run python ./test.sh
       - docker compose stop
