--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,8 @@ phases:
       - export AWS_ACCESS_KEY_ID=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.AccessKeyId')
       - export AWS_SECRET_ACCESS_KEY=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.SecretAccessKey')
       - export AWS_SESSION_TOKEN=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.SessionToken')
-      - echo "AWS_ACCESS_KEY_ID is :"
-      - ./mask_secret.sh $AWS_ACCESS_KEY_ID
-      - echo "AWS_SECRET_ACCESS_KEY is :"
-      - ./mask_secret.sh $AWS_SECRET_ACCESS_KEY
-      - echo "AWS_SESSION_TOKEN is :"
-      - ./mask_secret.sh $AWS_SESSION_TOKEN
       - docker compose up dynamo-test -d
+      - docker compose ps
       - docker compose run python ./test.sh
       - docker compose stop
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
