--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,9 @@ phases:
       - export AWS_SESSION_TOKEN=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.SessionToken')
       - docker compose up -d
       - 'docker ps --format "{{.Names}}: {{.Networks}}"'
+      - export DYNAMO_TEST_HOST_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' google_login_back-dynamo-test-1)
+      - docker compose exec python curl ${DYNAMO_TEST_HOST_IP}:8000
+      - docker compose exec python curl dynamo-test:8000
       - docker compose exec python ./test.sh
       - docker compose stop
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
