--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -14,6 +14,12 @@
         "DB_ENDPOINT": "http://dynamo-test:8000"
       }
     },
+    "ci": {
+      "api_gateway_stage": "test",
+      "environment_variables": {
+        "DB_ENDPOINT": "http://localhost:8003"
+      }
+    },
     "dev": {
       "api_gateway_stage": "api",
       "autogen_policy": false
