--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,8 @@ phases:
       # - docker compose exec python curl ${DYNAMO_TEST_HOST_IP}:8000
       # - docker compose exec python curl dynamo-test:8000
       # - docker compose exec python ./test.sh
+      - docker compose ps
+      - curl localhost:8003
       - ./test.sh ci
       - docker compose stop
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
