--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,17 @@ services:
       AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN}
       AWS_DEFAULT_REGION: ap-northeast-1
     command: chalice local --host=0.0.0.0 --port=8002
+    networks:
+      - google_login_back
+
   dynamo:
     image: amazon/dynamodb-local
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     volumes:
       - ./dynamodb:/home/dynamodblocal/data
+    networks:
+      - google_login_back
+
   dynamo-test:
     image: amazon/dynamodb-local
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
@@ -29,6 +35,8 @@ services:
       - ./dynamodb-test:/home/dynamodblocal/data
     ports:
       - 8003:8000
+    networks:
+      - google_login_back
 
   dynamo-admin:
     image: aaronshaf/dynamodb-admin:latest
@@ -38,3 +46,8 @@ services:
       - 8001:8001
     depends_on:
       - dynamo
+    networks:
+      - google_login_back
+
+networks:
+  google_login_back:
