--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,6 +24,7 @@ phases:
       - docker compose exec python curl dynamo-test:8000
       - docker compose exec python python get_request.py https://www.example.com
       - docker compose exec python python get_request.py http://dynamo-test:8000
+      - docker compose exec python python create_table.py
       - docker compose exec python python test_exec_dynamo.py
       - docker compose exec python ./test.sh
       - docker compose stop
