--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,12 +21,14 @@ phases:
       - docker compose ps
       - sleep 20 # 起動待ち
       - curl localhost:8003
-      - docker compose exec python curl dynamo-test:8000
-      - docker compose exec python python get_request.py https://www.example.com
-      - docker compose exec python python get_request.py http://dynamo-test:8000
-      - docker compose exec python python create_table.py
-      - docker compose exec python python test_exec_dynamo.py
-      - docker compose exec python ./test.sh
+      - docker compose exec python bash
+      - curl dynamo-test:8000
+      - python get_request.py https://www.example.com
+      - python get_request.py http://dynamo-test:8000
+      - python create_table.py
+      - python test_exec_dynamo.py
+      - ./test.sh
+      - exit
       - docker compose stop
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
 
