--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,18 +31,17 @@ phases:
       # - python get_request.py http://dynamo-test:8000
       # - python create_table.py
       # - python test_exec_dynamo.py
-      - ./test.sh
-      - exit
+      - docker compose exec python ./test.sh
       - docker compose stop
-      - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
+      # - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
 
-  build:
-    on-failure: ABORT
-    commands:
-      - chalice deploy
+  # build:
+  #   on-failure: ABORT
+  #   commands:
+  #     - chalice deploy
 
-  post_build:
-    on-failure: ABORT
-    commands:
-      - aws s3 cp .chalice/deployed/dev.json s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json
-      - python create_table.py
+  # post_build:
+  #   on-failure: ABORT
+  #   commands:
+  #     - aws s3 cp .chalice/deployed/dev.json s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json
+  #     - python create_table.py
