--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,10 +13,10 @@ phases:
       - export AWS_ACCESS_KEY_ID=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.AccessKeyId')
       - export AWS_SECRET_ACCESS_KEY=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.SecretAccessKey')
       - export AWS_SESSION_TOKEN=$(echo "${TEMP_ROLE}" | jq -r '.Credentials.SessionToken')
-      - docker compose up -d
+      - docker compose up dynamo-test -d
       - chmod 777 dynamodb-test/
-      - sleep 20 # 起動待ち
-      - docker compose exec python ./test.sh
+      - sleep 5 # 起動待ち
+      - docker compose run python ./test.sh
       - docker compose stop
       - aws s3 cp s3://jtamu-chalice-deployed-bucket01/google_login_back/dev.json .chalice/deployed/dev.json || true
 
